# typewriter-module

./: LICENSE  README.md  pyproject.toml
docs/: issues.md
src/typewriter/: __init__.py  main.py
src/typewriter_module/: __init__.py  main.py
