[project]
name = "typewriter-module"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "shankar-narayan-k", email = "28480889+shankar-narayan-k@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
typewriter-module = "typewriter_module:main"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"
