[project]
name = "typewriter"
version = "0.1.0"
description = "Decorator-based typewriter effect for terminal output"
readme = "README.md"
authors = [
    { name = "shankar-narayan-k", email = "28480889+shankar-narayan-k@users.noreply.github.com" }
]
requires-python = ">=3.9"
dependencies = []

[project.scripts]
typewriter = "typewriter:main"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
